--- a/styles/framework.navbar.styl
+++ b/styles/framework.navbar.styl
@@ -2,10 +2,11 @@
 /* ------ NAV ------ */
 /* ------------------- */
 nav
-  display flex
-  height 48px
-  .btn
-    height 100%
-    line-height 32px
-  button
-    height 100%      
+  &.navbar-top
+    display flex
+    height 48px
+    .btn
+      height 100%
+      line-height 32px
+    button
+      height 100%
