--- a/src/app.styl
+++ b/src/app.styl
@@ -10,53 +10,43 @@
 @import "control.switch"
 @import "control.upload"
 
-body
-  margin 0
-  min-height 100%
-  & > header
-    display flex
-    background-color var(--colorBlue-900)
-    position sticky
-    z-index 999
-    top 0
-    height 48px
-    section
-      flex 1
-      &.logo
-        flex 0 1 240px
-        background-size contain
-        background-repeat no-repeat
-        background-position center center
-      &.main
-        display flex
-        align-items center
-        justify-content flex-end
-        padding 0 64px
-        background-color $colorBlue-800
-      img
-        width 100%
-      button
-        background-color #00a650
-        border 0
-        padding 8px 16px
-        color white
-        border-radius 4px
-        text-transform uppercase
-        cursor pointer
-        &[disabled]
-          cursor normal
-          pointer-events none
-          opacity .3
-
-article
-  section
-    margin-bottom 16px
-    padding 16px
-    background-color white
-    border-radius 6px
-    border 1px solid #ccc
-    header
-      margin-bottom 16px
+// body
+//   margin 0
+//   min-height 100%
+//   & > header
+//     display flex
+//     background-color var(--colorBlue-900)
+//     position sticky
+//     z-index 999
+//     top 0
+//     height 48px
+//     section
+//       flex 1
+//       &.logo
+//         flex 0 1 240px
+//         background-size contain
+//         background-repeat no-repeat
+//         background-position center center
+//       &.main
+//         display flex
+//         align-items center
+//         justify-content flex-end
+//         padding 0 64px
+//         background-color $colorBlue-800
+//       img
+//         width 100%
+//       button
+//         background-color #00a650
+//         border 0
+//         padding 8px 16px
+//         color white
+//         border-radius 4px
+//         text-transform uppercase
+//         cursor pointer
+//         &[disabled]
+//           cursor normal
+//           pointer-events none
+//           opacity .3
 
 // nav
 //   flex 0 1 240px
