--- a/src/framework.button.styl
+++ b/src/framework.button.styl
@@ -35,6 +35,8 @@ button
       width 16px
       height 16px
       vertical-align middle
+  &.btn-transparent
+    background-color transparent
   &.btn-danger
     color #dc3545
     border 1px solid currentColor
