--- a/src/framework.navbar.styl
+++ b/src/framework.navbar.styl
@@ -5,6 +5,8 @@ nav
   &.navbar-top
     display flex
     height 48px
+    .ul-menu
+      flex 1
     .btn
       height 100%
       line-height 32px
