--- a/src/framework.grid.styl
+++ b/src/framework.grid.styl
@@ -10,8 +10,15 @@
   display grid
   grid-template-columns repeat(2, 1fr)
   grid-template-rows 1fr
-  grid-column-gap 8px
-  grid-row-gap 8px
+  
+.grid
+.row
+  &.gap-8
+    grid-column-gap 8px
+    grid-row-gap 8px
+  &.gap-16
+    grid-column-gap 16px
+    grid-row-gap 16px
   
 @media screen and (min-width: 1024px)
   .grid
