--- a/src/framework.helpers.styl
+++ b/src/framework.helpers.styl
@@ -10,6 +10,9 @@
 .text-right
   text-align right
 
+.text-center
+  text-align center
+
 .d-block
   display block!important
 
@@ -22,5 +25,5 @@
 .style-type-none
   list-style-type none
   
-.text-center
-  text-align center
+.float-right
+  float right
