--- a/src/framework.helpers.styl
+++ b/src/framework.helpers.styl
@@ -27,3 +27,15 @@
   
 .float-right
   float right
+
+
+body
+  &.framework-no-scroll
+    margin 0
+    height 100%
+    overflow hidden
+
+@media only screen and (min-width: 1024px)
+  .desktop-w-80
+    width 80%
+    margin 0 auto
