--- a/src/framework.navbar.styl
+++ b/src/framework.navbar.styl
@@ -5,10 +5,56 @@ nav
   &.navbar-top
     display flex
     height 48px
-    .ul-menu
-      flex 1
-    .btn
-      height 100%
-      line-height 32px
-    button
-      height 100%
+    &.opened
+      .ul-menu
+        translate 100%
+    ul
+      &.ul-logo
+        flex 1
+        text-align center
+        a
+          display: inline-block;
+          height: 100%;
+          width: fit-content;
+        img
+          width: auto;
+          height: 100%;
+      &.ul-menu
+        flex 1
+        position absolute
+        left -100%
+        translate 0
+        top 48px
+        width 100%
+        height calc(100vh - 48px)
+        background-color #000
+        transition translate .1s linear .1s;
+        li
+          display block
+          text-align left
+          width 100%
+          height auto
+      button
+      a.btn
+        line-height 32px
+        height 100%
+    
+
+@media screen and (min-width: 1024px)
+  nav
+    &.navbar-top
+      padding 0 16px
+      button
+        height 100%
+      ul
+        &.ul-burger
+          display none
+        &.ul-logo
+          flex initial
+          text-align left
+        &.ul-menu
+          position initial
+          height 100%
+          li
+            width fit-content
+            height 100%
